ND2 bug #030: Changed letter and line spacing to match main body.

--- a/app/styles/_ND2.scss
+++ b/app/styles/_ND2.scss
@@ -49,7 +49,8 @@
     font-family: $font-family-sans-serif;
     font-size: $font-size-h5;
     color: #FFFFFF;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
+    line-height: 1.35;
     padding-top: 0px;
     padding-bottom: 20px;
     margin-top: 0px;
